fix spacing on image in a dirty way right now, will fix later

--- a/css/jaron.css
+++ b/css/jaron.css
@@ -26,3 +26,7 @@ html,body {
     right:0px;
     bottom:51px;
 }
+
+.img {
+    top:10px;
+}
